Fixed an issue with some header spacing

--- a/src/web/themes/custom/workbc/scss/components/_side-nav.scss
+++ b/src/web/themes/custom/workbc/scss/components/_side-nav.scss
@@ -3,6 +3,7 @@
 
     h2 {
         font-size: 1.125rem;
+        line-height: 2.8125rem; // to keep it horizontally centered with page title text. So this should be the same font/lineheight as the page title h1...
         font-weight: bold;
         padding-bottom: 2 * $workbc_spacing_gutters;
     }
